# AI_Team

./: .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  INSTALL_GUIDE.txt  README.md  pyproject.toml
data/: metrics-report.md  notifications.jsonl  scheduler.db-shm  scheduler.db-wal
data/outputs/: kakao_news_20260406.md
data/skills/: registry.json
domains/: _example.yaml
src/: main.py
src/agent_mode/: agent_chat_config.py  agent_chat_manager.py  agent_router.py  agent_summary_store.py  bg_task_manager.py  mention_parser.py  session.py
src/agents/: base.py  ceo.py  (+3 more)
tests/: conftest.py  test_advisory_isolated.py  test_agent_chat_manager.py  test_agent_router.py  test_agent_session.py  test_agent_summary_store.py  test_anthropic_client.py  test_bg_task_manager.py  test_blackboard.py  test_breadth_pipeline.py  test_builder.py  test_claude_code_bridge.py  test_cli_stability.py  test_collection_blackboard.py  test_context_loss_prevention.py  test_dandelion_engine.py  test_dandelion_imaginer.py  test_dandelion_integration.py  test_dandelion_schemas.py  test_dandelion_supervisor.py  test_datalab_ingest.py  test_datalab_sandbox.py  test_datalab_security.py  test_dedup.py  test_dependency_graph.py  test_dev_runner.py  test_engine.py  test_engine_core.py  test_engineering_integration.py  test_engineering_phase_engine.py  test_engineering_resource_guard.py  test_engineering_session_store.py  test_engineering_tools.py  test_engineering_workspace.py  test_execution_tracker.py  test_foresight_unit.py  test_guards.py  test_main_ui.py  test_mention_parser.py  test_metrics_store.py  (+26 more)
(+285 files in other folders)
