[project]
name = "enterprise-agent-system-local"
version = "0.2.0-local"
description = "Hierarchical multi-agent system — Local version (Claude Code CLI)"
requires-python = ">=3.11"

dependencies = [
    "langchain-core>=0.3.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.0",
]
ui = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "chardet>=5.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "kaleido>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8.0",
]

[project.scripts]
enterprise-agent = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live Claude Code integration tests (require CLI)",
    "timeout: test timeout in seconds (requires pytest-timeout)",
]
